public/css/mainPage.css
@import url(https://fonts.googleapis.com/css?family=Carter+One);
html,
body {
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100% color: white;
    font-family: 'Open Sans', 'Calibri';
    overflow: auto;
}

button {
    cursor: pointer;
}

h1.title {
    font-size: 32px;
    margin-bottom: 2em;
}

h1 {
    font-family: 'Open Sans', 'Calibri' !important;
}

h2 {
    font-family: 'Open Sans', 'Calibri' !important;
    margin-top: 20px;
}

h3 {
    font-family: 'Open Sans', 'Calibri' !important;
    margin-top: 20px;
}

label {
    font-family: 'Open Sans', 'Calibri' !important;
    color: Black;
    font-weight: normal !important;
}

.clearfix:after {
    content: ".";
    display: block;
    clear: both;
    visibility: hidden;
    line-height: 0;
    height: 0;
}

.clearfix {
    display: inline-block;
}

html[xmlns] .clearfix {
    display: block;
}

* html .clearfix {
    height: 1%;
}


/*TODO: consolidate the .active classes to mainly use/remove redundant code*/

.active {
    display: block !important;
}

.page-container {
    position: relative;
    display: block;
    width: 100%;
    height: 100%;
}

.side-bar {
    float: left;
    height: 100%;
    width: 100%;
    background-color: rgb(4, 53, 101);
    z-index: 10;
    overflow: auto;
}

.side-item-box {
    display: block;
    width: 90%;
    margin: 1em auto;
}

.side-item {
    display: block;
    /*margin: 1em auto;*/
    width: 100%;
    height: 50px;
    /*background-color: black;*/
}

.side-item.title,
.side-item.upload-button,
.side-item.description {
    /*background-color: white;*/
}

.side-item.graph {
    height: 500px;
    margin-bottom: 20px;
}

.move-button {
    width: 15%;
    margin-left: 90%;
}

#map-container {
    position: relative;
    width: 100%;
    height: 100%;
    z-index: 1;
}

.wrap {
    overflow: hidden;
    /*padding: 20px 50px;*/
    display: block;
    border-radius: 4px;
    transform: translateY(20px);
    transition: all 0.5s;
    visibility: hidden;
    background-color: white;
}

.wrap .content {
    opacity: 0;
    margin: 0px !important;
    background-color: white !important;
    width: 100%;
    height: 100%;
    padding: 0px 20px 5px 20px;
}

#select-area-wrap {
    position: fixed;
    top: 10%;
    right: 10%;
    bottom: 85px;
    left: 10%;
    border-radius: 0 !important;
}

#area-attributes-div {
    position: fixed;
    bottom: 0%;
    right: 0%;
    height: 310px;
    width: 300px;
    background-color: white !important;
    opacity: 0.8;
}

#area-attributes-div-minimize-button {
    opacity: 1.0 !important;
}

#topography-wrap {
    position: absolute;
    top: 10%;
    left: 0%;
    height: 70%;
    width: 40%;
}

.wrap#area-attributes-div .top-right-buttons {
    top: 0px;
}

#close-sidebar-button {
    border: none;
    color: red;
    font-size: 30px;
}

.top-right-buttons {
    position: absolute;
    top: 5px;
    right: 15px;
    z-index: 3;
}

#graph-div-button {
    border: none;
    color: red;
    font-size: 30px;
}

.wrap:before {
    position: absolute;
    width: 1px;
    height: 1px;
    background: white;
    content: "";
    bottom: 10px;
    left: 50%;
    top: 95%;
    color: #fff;
    border-radius: 50%;
    -webkit-transition: all 600ms cubic-bezier(0.215, 0.61, 0.355, 1);
    transition: all 600ms cubic-bezier(0.215, 0.61, 0.355, 1);
}

.wrap.active {
    display: block;
    visibility: visible;
    box-shadow: 2px 3px 16px silver;
    transition: all 600ms;
    transform: translateY(0px);
    transition: all 0.5s;
    z-index: 99;
}

.wrap.active:before {
    border-radius: 50%;
    top: 50%;
    left: 50%;
    margin-left: -1000px;
    margin-top: -1000px;
    display: block;
    -webkit-transition: all 600ms cubic-bezier(0.215, 0.61, 0.355, 1);
    transition: all 600ms cubic-bezier(0.215, 0.61, 0.355, 1);
}

.wrap.active .content {
    position: relative;
    z-index: 2;
    opacity: 1;
    transition: all 600ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
    overflow: auto;
}

.wrap.active.toggled .content {
    display: none;
}

#popupButton {
    outline: none;
    font-size: 12px;
    transition: transform 0.25s;
}

#popupButton:hover {
    text-decoration: none;
    background: #2198ff;
}

#popupButton.active {
    transform: rotate(135deg);
    transition: transform 0.5s;
}

#map {
    width: 100%;
    height: 100%;
}

#input {
    color: coral;
    font-family: 'Open Sans', cursive;
}

.accordion {
    background: DeepSkyBlue;
    border-bottom: 1px solid DodgerBlue;
    border-radius: 7px 7px 0 0;
    color: white;
    font-size: 1.5em;
    margin-top: 0.222em;
    padding: 0.5em 1em;
}

.accordion dd {
    border: 1px solid DeepSkyBlue;
    border-top: none;
    border-radius: 0 0 7px 7px;
    paddig: 1em;
}

button.accordion {
    /*background-color: #eee;
    color: #444;*/
    background-color: DeepSkyBlue;
    border-bottom: 1px solid DodgerBlue;
    cursor: pointer;
    padding: 18px;
    width: 100%;
    border: none;
    text-align: left;
    outline: none;
    font-size: 15px;
    transition: 0.4s;
}

button.accordion.active,
button.accordion:hover {
    background-color: orange;
    color: black;
}

div.panel {
    padding: 0 18px;
    display: none;
    color: white;
    border: 1 px solid orange;
}

div.panel.show {
    border: 1px solid orange !important;
    display: block !important;
    color: white !white;
}

div.panel.show > p {
    color: black;
}

button {
    font-family: 'Open Sans', 'Calibri'
}

p.ul {
    color: black !important;
}

div.menu {
    margin-top: 2em;
}

#search-bar {
    z-index: 99;
}

#search-bar .input-group {
    max-width: 240px;
}

#top-map-buttons {
    position: absolute;
    top: 10px;
    left: 0px;
    z-index: 99;
    height: 50px;
}

#top-map-buttons > div {
    margin-left: 10px;
    border-radius: 5px;
    float: left;
    z-index: 99;
}

#map-type-menu {
    background: #fff;
    font-family: 'Open Sans', sans-serif;
    width: 120px;
    min-height: 34px;
}
/* ... */

